# programming-kata

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  requirements.txt
algorithms/go/: __debug_bin  cyclicShift.go  cyclicShift_test.go  debug.test  main.go
algorithms/java/: ArrayRotation.java  CountInversions.java  CyclicShift.java  IterateOverMatrixDiagonals.java  ReverseString.java
computer-graphics/: Physics.cpp  Physics.h  Vector.cpp  Vector.h  colorPolygon.cpp  emptySDL.cpp  example.cpp  firstPolygon.cpp  lightPolygon.cpp  movement.cpp  texturePolygon.cpp
data-structures/collection/: ICollection.h
data-structures/list/: IList.h
tests/: computer-graphics-test.cpp  emptySDL.cpp  main.cpp
